# XSafeClaw

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  OpenApp.bat  QUICKSTART-linux.md  QUICKSTART-macOS.md  QUICKSTART.md  README.md  README_backup.md  README_old.md  README_zh.md  hatch_build.py  main.py  package-lock.json  pyproject.toml  run.py  setup.sh  start.sh
.codex-preview/: hermes-mock-api.cjs
.github/workflows/: build-windows.yml
debug/: nanobot适配开发7_安装引导页面开发.md  nanobot配置向导与模型下拉实现总结.md
docs/: RELEASE.md  installation.md  openclaw-2026.4.25-compatibility.md  safeclaw-architecture.html  social-account-guard.md  token-cost-sources.md  xsafeclaw-architecture.html
docs/superpowers/plans/: 2026-06-25-store-config-page-implementation.md
docs/superpowers/specs/: 2026-06-25-store-config-page-design.md
frontend/: agent-town.html  agent-valley.html  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/Map/: Map_V1.tmj
frontend/public/Map-opensorce/: Map_opensource.tmj
frontend/public/UI/: button_1.tmj  button_change.tmj  select.tmj  show_charactor.tmj  status.tmj
frontend/public/map_assets/: Office_interiors_shadowless_32x32.tsj  gym.tsj  office_6.tsj
frontend/src/: App.css  App.test.tsx  App.tsx  HermesStoreConfig.tsx  NanobotStoreConfig.tsx  OpenClawStoreConfig.tsx  StoreConfigFields.tsx  StoreConfigPage.tsx  index.css  main.tsx  storeConfigTypes.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/tests/: agentCardDialog.test.jsx  agentValleyLayoutStyles.test.mjs  conversationPanelUtils.test.mjs  crewTabLedgerButton.test.jsx  gameEngineNameTagStyle.test.mjs  setupCodexCard.test.jsx
fyh_add/: Dockerfile
plugins/safeclaw-guard/: index.js  index.ts  openclaw-plugin-sdk.d.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugins/safeclaw-guard-hermes/: __init__.py  plugin.yaml
plugins/safeclaw-guard-nanobot/: plugin.json  safeclaw_guard_nanobot.py
scripts/: import_existing.py  init_db.py  sync_events.py
src/: sitecustomize.py
src/safeclaw/: __main__.py  cli.py  config.py  database.py  gateway_client.py
src/xsafeclaw/: __main__.py  _supervisor.py  cli.py  config.py  database.py  desktop_backend.py  desktop_sidebar.py  gateway_client.py  hermes_client.py  nanobot_gateway_client.py  path_protection.py  risk_rules.py
tests/: test_agent_store_catalog.py  test_agent_store_install_routes.py  test_api.py  test_asset_scan_cancel.py  test_chat_history_content_limit.py  test_chat_history_user_text.py  test_chat_session_sync.py  test_cli_landing.py  test_codex_auth_routes.py  test_codex_conversations_routes.py  test_codex_guard_hook.py  test_codex_install_routes.py  test_codex_models_routes.py  test_codex_rate_limits_routes.py  test_codex_safety_prompt.py  test_codex_sessions_routes.py  test_denylist.py  test_desktop_backend.py  test_desktop_sidebar.py  test_gateway_client.py  test_guard_risk_rules.py  test_guard_service_provider_compat.py  test_guard_tool_policy.py  test_hermes_event_bridge.py  test_hermes_guard_plugin_session_context.py  test_hermes_model_backfill.py  test_hermes_safety_system_prompt.py  test_memory_file_collection.py  test_message_sync_cleanup.py  test_multi_runtime_registry.py  test_nanobot_config_gateway_restart.py  test_nanobot_gateway_client.py  test_nanobot_realtime_trace.py  test_nanobot_runtime_guard.py  test_nanobot_sync_model_fallback.py  test_nanobot_trace_tailer.py  test_nanobot_usage_parse.py  test_openclaw_configure_frontend.py  test_openclaw_onboard_config.py  test_openclaw_trace_tailer.py  (+13 more)
xs/: .env.example  .gitignore  XSafeClaw-main-改动总结.md  pyproject.toml  start.sh
xs/frontend/: package-lock.json
xs/tests/: test_asset_scan_cancel.py
(+361 files in other folders)
