[project]
name = "xsafeclaw"
version = "1.0.0"
description = "XSafeClaw - Real-time monitoring and security for local OpenClaw and nanobot AI agents."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "agent-security",
    "ai-safety",
    "openclaw",
    "nanobot",
    "guardrails",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "greenlet>=3.3.1",
    "pynvml>=13.0.1",
    "cryptography>=46.0.5",
    "websockets>=16.0",
]

[project.scripts]
xsafeclaw = "xsafeclaw.cli:app"

[project.urls]
Homepage = "https://xsafeclaw.ai"
Repository = "https://github.com/XSafeAI/XSafeClaw"
Documentation = "https://github.com/XSafeAI/XSafeClaw/blob/main/docs/installation.pdf"
Issues = "https://github.com/XSafeAI/XSafeClaw/issues"

[project.optional-dependencies]
nanobot = [
    "nanobot-ai",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xsafeclaw"]

[tool.hatch.build.targets.sdist]
exclude = ["frontend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
